# marimo-qgis

./: .gitignore  CLAUDE.md  MARIMO_QGIS.md  Makefile  PLANNING.md  README.md  TROUBLESHOOTING.md  marimo-qgis  marimo_tutorial.py  pyproject.toml  qgis_test.py  stations_analysis.py  test_simple.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-27-gpkg-summary.md  2026-03-27-stations-distance-analysis.md
docs/superpowers/specs/: 2026-03-27-gpkg-summary-design.md  2026-03-27-stations-distance-analysis-design.md
example/: INSTRUCTIONS.md  example.gpkg  gpkg_summary.py  processing_demo.py  simple_marimo_qgis.py
plugin/: __init__.py  algorithm.py  metadata.txt  plugin.py  provider.py
processing/: launch_marimo.py
