[project]
name = "marimo-qgis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
